--- a/report/report.tex
+++ b/report/report.tex
@@ -1,13 +1,7 @@
 \documentclass[letterpaper]{article}
 \usepackage{aaai}
-\usepackage{times}
-\usepackage{helvet}
-\usepackage{courier}
 \usepackage{amsmath}
-\usepackage{tabularx}
 \usepackage{pgfplots}
-\usepackage{floatrow}
-\usepackage{tikz}
 \RequirePackage{booktabs}
 \setlength{\pdfpagewidth}{8.5in} 
 \setlength{\pdfpageheight}{11in}
@@ -22,11 +16,13 @@
 
 \section{Introduction}
 
-The purpose of this project is to simulate an automated vacuum cleaner (AUC). We will represent a room as a 2D plane which has clean and dirty points/tiles. There will also be obstacles in the room such as furniture which would obstruct paths for a vacuum. The goal of the vacuum cleaner is to clear all the dirty points/tiles and navigate/find a path around the obstacles in the room.
+The purpose of this project is to simulate an automated vacuum cleaner (AUC). We will represent a room as a 2D plane which has clean and dirty points/tiles. The goal of the vacuum cleaner is to clear all the dirty points and navigate/find a path around the the room.
 
-In the project we will implement a variety of different vacuums and study its impact on performance. There have been several papers written on the study of automated vacuum cleaners. IRobot’s Roomba is an example of such a robot, we will study this implementation when developing our own algorithms.
+In the project we implement a variety of different vacuums and study its impact on performance. There have been several papers written on the study of automated vacuum cleaners. IRobot’s Roomba is an example of such a robot, we will study this implementation when developing our own algorithms.
 
-Yap [2] explores a variety of grid based approaches, we will be using the octet selection grid when identifying the next point for the robot to move to as shown in figure 1. 
+Yap [2] explores a variety of grid based path finding algorithms, they identify an octet selection grid as an option of choosing the next point for the robot to move to as shown in figure 1. While the direct application of this paper will apply to room cleaning vacuum, these path-finding algorithms can be applied to robots searching for landmines, lawnmowers, and other agricultural tasks [3]. 
+
+The implementation for this this project will be derived from a rudimentary implementation of a roomba robot [4]. This implementation [4] chose its next move based on a random selection from a 360$^{\circ}$ scale. We have instead opted to use the octect based selection as shown on figure 1 to choose the next tile. 
 
 \begin{figure}[h]
 	\begin{tikzpicture}
@@ -34,6 +30,7 @@ Yap [2] explores a variety of grid based approaches, we will be using the octet 
 	\node at (+0.75,+0.75) {B};
 	\end{tikzpicture}
 \caption{ octet choice grid: the bot,B, has eight adjacent positions it can move to}
+\label{figure:1}
 \end{figure}
 \section{Experiment Implementation}
 
@@ -53,9 +50,10 @@ The following is a list of the capabilities of each Vacuum robot.
 \subsection{Random Bot}
 
 \begin{tabular}{ r | l }  
-	Preloaded Map 		& No \\
+	Preloaded map 		& No \\
 	Store explored 		& No \\
-	Proximity Sensor 	& No \\
+	Proximity 		 	& No \\
+	sensor 					 \\
 \end{tabular}
 \quad
 \begin{tabular}{ r | l }  
@@ -76,7 +74,8 @@ When the robot is initialized, it will clean the location it is placed on and th
 \begin{tabular}{ r | l }  
 	Preloaded Map 		& Yes \\
 	Store explored 		& No \\
-	Proximity Sensor 	& No \\
+	Proximity  		 	& No \\
+	sensor 					 \\
 \end{tabular}
 \quad
 \begin{tabular}{ r | l }  
@@ -93,7 +92,8 @@ The preloaded map was a Robot which was given the the exact boundaries of the ro
 \begin{tabular}{ r | l }  
 	Preloaded Map 		& Yes \\
 	Store explored		& No \\
-	Proximity Sensor 	& No \\
+	Proximity 		 	& No \\
+	sensor 					 \\
 \end{tabular}
 \quad
 \begin{tabular}{ r | l }  
@@ -112,7 +112,8 @@ The store map with direction was an extension to the store map. However, this ma
 	Preloaded Map 		& No \\
 	Store Explored 		& No \\
 	Dirt Sensor 		& Yes \\
-	Proximity Sensor 	& Yes \\
+	Proximity  		 	& Yes \\
+	sensor 					 \\
 \end{tabular}
 \quad
 \begin{tabular}{ r | l }  
@@ -139,7 +140,8 @@ where time x was decremented by $0.01$ during each step.  The program in theory 
 	Preloaded Map 		& No \\
 	Store explored 		& Yes \\
 	Dirt Sensor 		& No \\
-	Proximity Sensor 	& No \\
+	Proximity 		 	& No \\
+	sensor 					 \\
 \end{tabular}
 \quad
 \begin{tabular}{ r | l }  
@@ -174,7 +176,8 @@ If a spot is chosen that is outside of the grid, the program essentially loses a
 	Preloaded Map 		& No \\
 	Store explored 		& Yes \\
 	Dirt Sensor 		& No \\
-	Proximity Sensor 	& Yes \\
+	Proximity 		 	& Yes \\
+	sensor 					 \\
 \end{tabular}
 \quad
 \begin{tabular}{ r | l }  
@@ -190,6 +193,7 @@ This program is an extension of the `store explored' program.  One of the things
 Adding a proximity sensor the the vacuum robot allowed us to do the following.  When the robot first starts cleaning it chooses a single direction.  Once it reaches a wall it then begins the existing algorithm from the `store explored' robot.  This the robot can start cleaning on 1 side of the room, and not have to back track.  The result was improved cleaning times.
 
 \section{Results}
+\begin{table}[h!]
 \begin{tabular}{ r | l l l l l }  
 					& 10\%		& 50\%		& 80\%		& 100\%		\\
 	\midrule
@@ -202,7 +206,11 @@ Adding a proximity sensor the the vacuum robot allowed us to do the following.  
 	Store Explored 	& 100\%		& 100\% 	& 100\%  	& 100\% 	\\
 	with proximity 	\\
 \end{tabular}
+\caption{Percent success (depth = 1,000,000)}
+\label{table:1}
+\end{table}
 
+\begin{table}[h!]
 \begin{tabular}{ r | l l l l l }  
 					& 10\%		& 50\%		& 80\%		& 100\%		\\
 	\midrule
@@ -215,6 +223,8 @@ Adding a proximity sensor the the vacuum robot allowed us to do the following.  
 	Store Explored 	& 539		& 3857 		& 7163 		& 16898		\\	
 	with proximity 	\\
 \end{tabular}
+\caption{Actual steps taken to complete (depth = 1,000,000)}
+\end{table}
 
 \begin{tikzpicture}
 	\begin{axis}[
@@ -264,8 +274,119 @@ Adding a proximity sensor the the vacuum robot allowed us to do the following.  
 	};
 	\addlegendentry{Store Explored /w Proximity}
 	\end{axis}
+\end{tikzpicture}
+
+
+
+
+
+\begin{tikzpicture}
+	\begin{axis}[
+		xlabel=Required Percentage cleaned,
+		ylabel=Steps taken,
+		legend style={at={(0.02,1.1)},anchor=south west}]
+	\addplot[color=red,mark=x] coordinates {
+ 		(  10,   3570)
+ 		(  50,   9752)
+ 		(  80,  10000)
+ 		( 100,  10000)
+	};
+	\addlegendentry{Random}
+	\addplot[color=green,mark=x] coordinates {
+ 		(  10,   375)
+ 		(  50,  3941)
+ 		(  80,  7905)
+ 		( 100, 10000)
+	};
+	\addlegendentry{Store Map}
+	\addplot[color=orange,mark=x] coordinates {
+ 		(  10,   160)
+ 		(  50,   588)
+ 		(  80,  1707)
+ 		( 100,  2403)
+	};
+	\addlegendentry{Store Map /w direction}
+	\addplot[color=yellow,mark=x] coordinates {
+ 		(  10,   6431)
+ 		(  50,   9476)
+ 		(  80,  10000)
+ 		( 100,  10000)
+	};
+	\addlegendentry{Proximity}
+	\addplot[color=blue,mark=x] coordinates {
+ 		(  10,    520)
+ 		(  50,   8539)
+ 		(  80,  10000)
+ 		( 100,  10000)
+	};
+	\addlegendentry{Store Explored}
+	\addplot[color=black,mark=x] coordinates {
+ 		(  10,    533)
+ 		(  50,   3864)
+ 		(  80,   6924)
+ 		( 100,  10000)
+	};
+	\addlegendentry{Store Explored /w Proximity}
+	\end{axis}
 
 \end{tikzpicture}
+
+
+
+
+
+\begin{tikzpicture}
+	\begin{axis}[
+		xlabel=Required Percentage cleaned,
+		ylabel=Success Rage (\%),
+		legend style={at={(0.02,1.1)},anchor=south west}]
+	\addplot[color=red,mark=x] coordinates {
+ 		(  10, 73)
+ 		(  50, 46)
+ 		(  80,  7)
+ 		( 100,  0)
+	};
+	\addlegendentry{Random}
+	\addplot[color=green,mark=x] coordinates {
+ 		(  10, 100)
+ 		(  50,  98)
+ 		(  80,  67)
+ 		( 100,   0)
+	};
+	\addlegendentry{Store Map}
+	\addplot[color=orange,mark=x] coordinates {
+ 		(  10,  100)
+ 		(  50,  100)
+ 		(  80,  100)
+ 		( 100,  100)
+	};
+	\addlegendentry{Store Map /w direction}
+	\addplot[color=yellow,mark=x] coordinates {
+ 		(  10, 37)
+ 		(  50, 24)
+ 		(  80,  0)
+ 		( 100,  0)
+	};
+	\addlegendentry{Proximity}
+	\addplot[color=blue,mark=x] coordinates {
+ 		(  10, 100)
+ 		(  50,  97)
+ 		(  80,   0)
+ 		( 100,   0)
+	};
+	\addlegendentry{Store Explored}
+	\addplot[color=black,mark=x] coordinates {
+ 		(  10,  100)
+ 		(  50,  100)
+ 		(  80,   91)
+ 		( 100,   0)
+	};
+	\addlegendentry{Store Explored /w Proximity}
+	\end{axis}
+
+\end{tikzpicture}
+
+
 
 \begin{tabular}{ r | l }  
 	\toprule
@@ -281,9 +402,10 @@ Adding a proximity sensor the the vacuum robot allowed us to do the following.  
 \end{tabular}
 
 \section{Conclusion}
-
+\ref{table:1}
 % \cite[p. 2] {Optimized_Path_Planning}
-
+\listoftables
+\listoffigures
 \nocite{*}
 \bibliography{report}
 \bibliographystyle{aaai}
